Tests/typing/bad/testfile-arith-5.jl

x = 1
println(x(x+1))
